# ChangeLog for app-cdr/brasero
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/brasero/ChangeLog,v 1.147 2012/12/16 14:07:18 eva Exp $

  16 Dec 2012; Gilles Dartiguelongue <eva@gentoo.org> brasero-3.6.1.ebuild:
  Version bump for Gnome 3.6.

*brasero-3.6.1 (16 Dec 2012)

  16 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  brasero-2.32.1-r1.ebuild, -brasero-3.2.0-r1.ebuild,
  -files/brasero-3.2.0-brasero.desktop.patch,
  -files/brasero-3.2.0-brasero-nautilus.desktop.patch,
  -files/brasero-3.2.0-drive-not-selected.patch, -brasero-3.4.0.ebuild,
  brasero-3.4.1.ebuild, +brasero-3.6.1.ebuild, metadata.xml:
  Version bump for gnome-3.6, now uses gstreamer-1.0. Update description and
  license. Drop useless doc USE flag. Switch to global introspection flag. Drop
  old.

  07 Nov 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  brasero-2.32.1-r1.ebuild, brasero-3.2.0-r1.ebuild, brasero-3.4.0.ebuild,
  brasero-3.4.1.ebuild:
  Slot gstreamer dependencies in preparation for gstreamer-1.0.

  26 Aug 2012; Julian Ospald <hasufell@gentoo.org> brasero-2.32.1-r1.ebuild,
  +files/brasero-2.32.1-underlinking.patch:
  fix underlinking wrt #429280

*brasero-3.4.1 (14 May 2012)

  14 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  +brasero-3.4.1.ebuild:
  Bump, translation updates only.

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> brasero-2.32.1-r1.ebuild,
  brasero-3.2.0-r1.ebuild, brasero-3.4.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*brasero-3.4.0 (14 Apr 2012)

  14 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  +brasero-3.4.0.ebuild:
  Version bump.

  28 Jan 2012; Pacho Ramos <pacho@gentoo.org> -brasero-2.32.1.ebuild,
  brasero-2.32.1-r1.ebuild:
  Prevent people from mixing brasero-2 with nautilus-3, bug #397469. Drop old.

  29 Dec 2011; Pacho Ramos <pacho@gentoo.org> brasero-2.32.1-r1.ebuild:
  amd64 stable, bug 393007
