@@ -13,13 +13,17 @@ DIST brasero-3.4.1.tar.xz 3233512 SHA256 e4fcd5dca1c7b0a930a43ae59953fa96db3f6be
 DIST brasero-3.6.1.tar.xz 3224840 SHA256 d293eb28dc45af3535f09cf91aa6ccc523f3f3d8b7ad3339b5e79b4acc19b932 SHA512 2504b0b3127c1d5a8bcce6b9c95e25e317cc2d95f32e31e048522594366354cca1cc551b61e38ae56000eeadfedb3950ce7f99bfcf8e3b6aba0a96371b69606e WHIRLPOOL f951e7db0e6c2d5c265caa12037cbffcea1ac6489fc5af645628b51162d1a7284c0d81393f3e487963426bd15197f434accbc4746f3f6ac909e6b086b2e71087
 EBUILD brasero-2.32.1-r1.ebuild 3547 SHA256 cff1cead00536c2310eb337d602700690bde16fb5f7c3cb28eabf61588fa5fe7 SHA512 f9dd5669825d2a63466f79ecfeae1ebc1ad44e26192969b1bf5fdfff07792efb566dadc317c26fc6787efff8d70bd1c52a9f8a35e726f63600cc30eeecfa0f9d WHIRLPOOL e2a346c9b84e3f56f70b0dde77999817e2c09445a1d86e8eb978b5411c82137fe1050901283d9646c3f5df056446b4ea2976642aeae83e7b2849abc611518df5
 EBUILD brasero-3.4.1.ebuild 2373 SHA256 e5c35eaec307af9796d73bba100a205ff93f459ee85de785f2a5ee45d50c0812 SHA512 2a244edf1b047b0cf64f3f43482526b04239f815bbe3d6d736a3d251a62b73114746d16cbbc63f6fc40949742996a2067c01a35fe9422c1d8719dd3f6b7c7818 WHIRLPOOL 85e4d1011899ee18a4dd1a4b5219bb89ce97a092ffcb2b630641216fd8dd158dcb699f09931baafe23a5106ad627b366aaa29a3276a686fbde8dbf4919259a3b
-EBUILD brasero-3.6.1.ebuild 2535 SHA256 1bce81740fc6cb449fc66cf1fd5ba17614275f96492360b63d7ea60c268959ed SHA512 2a0d2a92e1be6b94d5cb06c5b8cb843dd0d7721bd9da1c1bf1bd93cbbffb055793389784762bf5e9143e7aa0727ef43fee0411ae32588ff0bda621b11a77e867 WHIRLPOOL b4b24892f2d7736a962d46624f1c61b1f4e6e52fee7386236c46dafe03334d419e690257b8e9e7d06e1814ad32c26118f3a3f5151c957e962e46d9f782a8dfc3
-MISC ChangeLog 23899 SHA256 337f13ef1fb864bb3d20cd41dc63859c93e8078984e35dda52b1b0629a048b8c SHA512 5bf7465c54e8f3236243484d4708eedc4eba1d0b9d3f10d3a9023b0188422b6f2c31c414e8a54ea8700aa35c0efdf434854a51514d94553f16ba57959d2698cd WHIRLPOOL ae221f3ae3c73b798a4dc548b0784d5cd2f3f5fe06bcf060fbd2aff80a142a65829f289319ae0a31d8b904c1acfbf2b9356d6d5b3137e94d8c9e016dc6ea9dec
+EBUILD brasero-3.6.1.ebuild 2387 SHA256 240aea1f1147985481df3346b4a1d23db08fa11f4816352f27b9dc6567c9ec6e SHA512 b7284807b2a495f38f24380ecff5fc062f61a7a5097b68aecbcfb7b0e4b7a76cc23ee332c68bb89cc12851be6dfd7b2628572625f86a16a58569a796bb94c2c2 WHIRLPOOL 2b128b30bcfa2d0eb60ad9a1b28464d0d1b04737b0096d64bdd0140c38c18cf6f1f8cbb31e35089fa4e3fe2e2aad1da1620252035bbcd21cd516ad34a99d21fe
+MISC ChangeLog 24019 SHA256 3a5c7d283329edbd8378b24276d1061b133f4fa579114ef5d996fcca3e116dc7 SHA512 73964d765ab88486a1c1b607877aeec0ae59b624dd348a7a286962b8099757b8129edc246bb082be86d6cf92f28ebf93526b3deda8147f5f16e38f3cdd101951 WHIRLPOOL 1b01529d64a9127314e5bd6d9475997d620b76ba67ea489adaf684b8f28db7e858ceb240d71a03edeb97990435293c9629a4ea73053a8b2436b8d4b456d0b0d5
 MISC metadata.xml 701 SHA256 88db77e1d687f115e349955d16b87668900d105e5f8cf0baa99d04b32ff5da87 SHA512 ecd5c3323ab98e14ba515497af76b7a8c898a75cd0df05053557289b436b1f3fd8719828572ca849bd188d3e74082322c6441968f0b9d37a9983e677a5fb5a6b WHIRLPOOL 2e41f36a1cfe25ab7b0a99cf85e1f6e983f257cb04017d53f33e7899ce077db261b7978aae5b45ebde74951e70b81a2680ef6df859b4a2acf6fab0897b9ea1af
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlDN1ZcACgkQ1fmVwcYIWAaBsACeMFtw8R1pVdHjR9eC61/ZASkg
-qf8AnROhX4x0SoDookKB+3BnXhaTacPq
-=yyNI
+iQEcBAEBCAAGBQJQzgdFAAoJEJ0WA1zPCt1hErcH/3auIlkd1e2uEj5N1wMKW5L1
+ZChMHP6DZ+V4FFuoYmG0Cc+2E9A8HsD0DZsH3Hek/nwtIa7rkOKrfMyo5/NgwAt2
+X5qbKZc/6CuMhozmbGUwlytYbxOEZabxvnWuNEazMxlW8nAuAGIviPdaCxPl5Z4F
+vGYfNdigiNW3mJKtMgKX0CtSV5vExMxeQ8JgH082Eg8HgUwYZdo6PsQINbd3j0jm
+F9JzLAhQSnFsOE7urr5XjkfrGoeZOpiiwiuxSC38Qc3f3HWctcUjspBKuGfQbKN2
+jEQxSPRJYr7oe/3W2VvR4tv9xkuJQ5S1jnIUHtlDKf1dc1C9DNKdvzoUS+X/XNI=
+=qeG+
 -----END PGP SIGNATURE-----
