@@ -1,36 +1,28 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/brasero/brasero-3.6.1.ebuild,v 1.2 2012/12/16 14:07:18 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/brasero/brasero-3.6.1.ebuild,v 1.3 2012/12/16 17:39:16 tetromino Exp $
 
-EAPI="4"
+EAPI="5"
 GCONF_DEBUG="no"
 GNOME2_LA_PUNT="yes"
 
 inherit gnome2
-if [[ ${PV} = 9999 ]]; then
-	inherit gnome2-live
-fi
 
 DESCRIPTION="CD/DVD burning application for the GNOME desktop"
 HOMEPAGE="http://projects.gnome.org/brasero/"
 
-LICENSE="GPL-2+"
-SLOT="0"
+LICENSE="GPL-2+ CCPL-Attribution-ShareAlike-3.0"
+SLOT="0/3.1" # subslot is 3.suffix of libbrasero-burn3
 IUSE="+css +introspection +libburn mp3 nautilus packagekit playlist test tracker"
-if [[ ${PV} = 9999 ]]; then
-	IUSE="${IUSE} doc"
-	KEYWORDS=""
-else
-	KEYWORDS="~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86"
-fi
+KEYWORDS="~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86"
 
 COMMON_DEPEND="
 	>=dev-libs/glib-2.29.14:2
-	>=x11-libs/gtk+-3:3[introspection?]
+	>=x11-libs/gtk+-3.0.0:3[introspection?]
 	media-libs/gstreamer:1.0
 	media-libs/gst-plugins-base:1.0
 	>=dev-libs/libxml2-2.6:2
-	>=x11-libs/libnotify-0.6.1
+	>=x11-libs/libnotify-0.6.1:=
 
 	media-libs/libcanberra[gtk3]
 	x11-libs/libICE
@@ -38,11 +30,11 @@ COMMON_DEPEND="
 
 	introspection? ( >=dev-libs/gobject-introspection-0.6.3 )
 	libburn? (
-		>=dev-libs/libburn-0.4
-		>=dev-libs/libisofs-0.6.4 )
+		>=dev-libs/libburn-0.4:=
+		>=dev-libs/libisofs-0.6.4:= )
 	nautilus? ( >=gnome-base/nautilus-2.91.90 )
-	playlist? ( >=dev-libs/totem-pl-parser-2.29.1 )
-	tracker? ( >=app-misc/tracker-0.12 )"
+	playlist? ( >=dev-libs/totem-pl-parser-2.29.1:= )
+	tracker? ( >=app-misc/tracker-0.12:= )"
 RDEPEND="${COMMON_DEPEND}
 	media-libs/gst-plugins-good:1.0
 	x11-themes/hicolor-icon-theme
@@ -63,14 +55,9 @@ DEPEND="${COMMON_DEPEND}
 	virtual/pkgconfig
 	test? ( app-text/docbook-xml-dtd:4.3 )"
 # eautoreconf deps
+#	app-text/yelp-tools
 #	gnome-base/gnome-common
 PDEPEND="gnome-base/gvfs"
-
-if [[ ${PV} = 9999 ]]; then
-	DEPEND="${DEPEND}
-		app-text/yelp-tools
-		doc? ( >=dev-util/gtk-doc-1.12 )"
-fi
 
 src_configure() {
 	DOCS="AUTHORS ChangeLog MAINTAINERS NEWS README"
@@ -84,8 +71,8 @@ src_configure() {
 		$(use_enable libburn libburnia)
 		$(use_enable nautilus)
 		$(use_enable playlist)
-		$(use_enable tracker search)"
-	[[ ${PV} != 9999 ]] && G2CONF="${G2CONF} ITSTOOL=$(type -P true)"
+		$(use_enable tracker search)
+		ITSTOOL=$(type -P true)"
 
 	gnome2_src_configure
 }
@@ -95,5 +82,5 @@ pkg_postinst() {
 
 	echo
 	elog "If ${PN} doesn't handle some music or video format, please check"
-	elog "your USE flags on media-plugins/gst-plugins-meta"
+	elog "your USE flags on media-plugins/gst-plugins-meta:1.0"
 }
